--- a/src/client/views/index.html
+++ b/src/client/views/index.html
@@ -35,6 +35,13 @@
             <div id="agree"></div>
         </section>
     </main>
+    <script>
+        if ('serviceWorker' in navigator) {
+            window.addEventListener('load', () => {
+                navigator.serviceWorker.register('/service-worker.js');
+            });
+        }
+    </script>
 </body>
 
 </html>
