--- a/src/client/views/index.html
+++ b/src/client/views/index.html
@@ -24,7 +24,7 @@
         <section class="form-area">
             <form class="evaluate" onsubmit="return Client.handleSubmit(event)">
                 <input id="phrase" type="text" name="phrase" value="" placeholder="Name">
-                <input id="submit" type="submit" name="" value="Submit" onclick="return Client.handleSubmit(event)" onsubmit="return handleSubmit(event)">
+                <input id="submit" type="submit" name="" value="submit" onclick="return Client.handleSubmit(event)" onsubmit="return handleSubmit(event)">
             </form>
         </section>
 
